Fix use of SSLConfigService::SetCRLSetIfNewer() in test code.

This way the order that HTTPSCRLSetTest.* and HTTPSEVCRLSetTest.* are run does not affect their outcome.

Bug: 775323
Change-Id: I83691d98385811f6091bd38da3ec0ad4f0d33330
Reviewed-on: https://chromium-review.googlesource.com/722353
Commit-Queue: Eric Roman <eroman@chromium.org>
Reviewed-by: Matt Mueller <mattm@chromium.org>
Cr-Commit-Position: refs/heads/master@{#509275}
Former-commit-id: e2243cc605630596e96a9ac748d434bccad2fe48