net/ssl/ssl_config_service.cc
@@ -47,17 +47,12 @@ base::LazyInstance<GlobalCRLSet>::Leaky g_crl_set = LAZY_INSTANCE_INITIALIZER;
 
 // static
 void SSLConfigService::SetCRLSetIfNewer(scoped_refptr<CRLSet> crl_set) {
-  // Note: this can be called concurently with GetCRLSet().
-  while (true) {
-    scoped_refptr<CRLSet> old_crl_set(GetCRLSet());
-    if (old_crl_set.get() && old_crl_set->sequence() >= crl_set->sequence()) {
-      LOG(WARNING) << "Refusing to downgrade CRL set from #"
-                   << old_crl_set->sequence() << " to #" << crl_set->sequence();
-      break;
-    }
-    if (g_crl_set.Get().CompareAndSet(crl_set, old_crl_set))
-      break;
-  }
+  SetCRLSet(std::move(crl_set), /*if_newer=*/true);
+}
+
+// static
+void SSLConfigService::SetCRLSetForTesting(scoped_refptr<CRLSet> crl_set) {
+  SetCRLSet(std::move(crl_set), /*if_newer=*/false);
 }
 
 // static
@@ -103,6 +98,22 @@ void SSLConfigService::ProcessConfigUpdate(const SSLConfig& old_config,
 
   if (config_changed)
     NotifySSLConfigChange();
+}
+
+// static
+void SSLConfigService::SetCRLSet(scoped_refptr<CRLSet> crl_set, bool if_newer) {
+  // Note: this can be called concurently with GetCRLSet().
+  while (true) {
+    scoped_refptr<CRLSet> old_crl_set(GetCRLSet());
+    if (if_newer && old_crl_set && crl_set &&
+        old_crl_set->sequence() >= crl_set->sequence()) {
+      LOG(WARNING) << "Refusing to downgrade CRL set from #"
+                   << old_crl_set->sequence() << " to #" << crl_set->sequence();
+      break;
+    }
+    if (g_crl_set.Get().CompareAndSet(crl_set, old_crl_set))
+      break;
+  }
 }
 
 }  // namespace net
